syntax = "proto3";

package shimmer.protobuf;

message AddEmptyNode {
    string label = 1;
    string parent = 2;
}