syntax = "proto3";

package shimmer.protobuf;

message AddEmptyNodeToRoot {
    string label = 1;
    optional string meta = 2;
}