syntax = "proto3";

package shimmer.protobuf;

message AddNodeToCategory {
    uint64 key = 1;
    string label = 2;
    string parentLabel = 3;
    optional string meta = 4;
}