syntax = "proto3";

package shimmer.protobuf;

message AddNodeToRootStationed {
    uint64 key = 1;
    string label = 2;
    optional string meta = 3;
}